feat(2391) add --add-opens